--- a/views/index.html
+++ b/views/index.html
@@ -9,12 +9,13 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
       <link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
+              <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
-    <title>Jumbotron Template for Bootstrap</title>
+    <title>foodo Home</title>
 
     <!-- Bootstrap core CSS -->
-          <link href="../css/bootstrap.min.css" rel="stylesheet">
-      <link href="../css/custom.css" rel="stylesheet">
+          <link href="css/bootstrap.min.css" rel="stylesheet">
+      <link href="css/custom.css" rel="stylesheet">
 
       
 
@@ -49,8 +50,8 @@
     </nav>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
-      <div class="container">
+    <div class="jumbotron"  id="foodhome">
+      <div class="container" id="homebox">
           <center>
         <h1>Hello, Theodore!</h1>
         <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
@@ -62,17 +63,18 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-4">
-          <h2>Shop</h2>
+            
+          <h2><i class="fa fa-shopping-cart"></i>  Shop</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-md-4">
-          <h2>Track</h2>
+          <h2><i class="fa fa-line-chart"></i>  Track</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
        </div>
         <div class="col-md-4">
-          <h2>Give</h2>
+          <h2><span class="glyphicon glyphicon-grain"></span>  Give</h2>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
@@ -81,7 +83,6 @@
       <hr>
 
       <footer>
-        <p>&copy; 2015 Company, Inc.</p>
       </footer>
     </div> <!-- /container -->
 
