--- a/views/index.html
+++ b/views/index.html
@@ -14,8 +14,8 @@
     <title>foodo Home</title>
 
     <!-- Bootstrap core CSS -->
-          <link href="css/bootstrap.min.css" rel="stylesheet">
-      <link href="css/custom.css" rel="stylesheet">
+          <link href="../css/bootstrap.min.css" rel="stylesheet">
+      <link href="../css/custom.css" rel="stylesheet">
 
       
 
