--- a/css/custom.css
+++ b/css/custom.css
@@ -14,7 +14,7 @@
 body {
   padding-top: 50px;
   padding-bottom: 20px;
-  background-color: #84ECAF;
+  background-color: #ffdb4d;
     font-family: 'Oxygen', sans-serif;
 }
 
