--- a/views/give.html
+++ b/views/give.html
@@ -11,7 +11,7 @@
     <link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
-    <title>foodo | Home</title>
+    <title>foodo | Give</title>
 
     <!-- Bootstrap core CSS -->
           <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -39,46 +39,35 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <h3>foodo</h3>
+          <h3><a href="index.html" id="navlink">foodo</a></h3>
         </div>
+              
         <div id="navbar" class="navbar-collapse collapse">
+          <h4>Theodore <button type="submit" class="btn btn-success">Sign out</button></h4>
 
         </div><!--/.navbar-collapse -->
       </div>
     </nav>
-
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron"  id="foodhome">
-      <div class="container" id="homebox">
-          <center>
-        <h1>Hello, Theodore!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        </center>
-      </div>
-    </div>
 
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-4">
-            
-          <h2><i class="fa fa-shopping-cart"></i>  Shop</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <h2><a href="shop.html"><i class="fa fa-shopping-cart"></i>  Shop</a></h2>
         </div>
         <div class="col-md-4">
-          <h2><i class="fa fa-line-chart"></i>  Track</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <h2><a href="track.html"><i class="fa fa-line-chart"></i>  Track</a></h2>
        </div>
         <div class="col-md-4">
-          <h2><span class="glyphicon glyphicon-grain"></span>  Give</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <h2><a href="give.html"><span class="glyphicon glyphicon-grain"></span>  Give</a></h2>
+
         </div>
       </div>
 
-      <hr>
+      <footer>
+      </footer>
+    </div> <!-- /container -->
 
       <footer>
       </footer>
