--- a/views/index.html
+++ b/views/index.html
@@ -39,9 +39,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <h3>foodo</h3>
+          <h3><a href="index.html" id="navlink">foodo</a></h3>
         </div>
+              
         <div id="navbar" class="navbar-collapse collapse">
+          <h4>Theodore <button type="submit" class="btn btn-success">Sign out</button></h4>
 
         </div><!--/.navbar-collapse -->
       </div>
@@ -61,24 +63,16 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-4">
-            
-          <h2><i class="fa fa-shopping-cart"></i>  Shop</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <h2><a href="shop.html"><i class="fa fa-shopping-cart"></i>  Shop</a></h2>
         </div>
         <div class="col-md-4">
-          <h2><i class="fa fa-line-chart"></i>  Track</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <h2><a href="track.html"><i class="fa fa-line-chart"></i>  Track</a></h2>
        </div>
         <div class="col-md-4">
-          <h2><span class="glyphicon glyphicon-grain"></span>  Give</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <h2><a href="give.html"><span class="glyphicon glyphicon-grain"></span>  Give</a></h2>
+
         </div>
       </div>
-
-      <hr>
 
       <footer>
       </footer>
