--- a/views/track.html
+++ b/views/track.html
@@ -49,6 +49,14 @@
       </div>
     </nav>
     <!-- Main jumbotron for a primary marketing message or call to action -->
+      
+      <div class="container">
+          <br>
+      <iframe src="http://e.infogr.am/foodo-96214668004?src=embed" title="Foodo" width="50%" height="600px" scrolling="no" frameborder="0" style="border:none; float:left;"></iframe><div style="padding:8px 0;font-family:Arial!important;font-size:13px!important;line-height:15px!important;text-align:center;margin:0 30px">
+          <h2> text text text</h2>
+      </div>
+          </div>
+      <br>
 
     <div class="container">
       <!-- Example row of columns -->
