--- a/views/give.html
+++ b/views/give.html
@@ -50,6 +50,40 @@
     </nav>
     <!-- Main jumbotron for a primary marketing message or call to action -->
 
+    <div id="give-content">
+      <ul id="charities">
+        <p id= "donate-title">Donate</p>
+        <li class="charity">
+          <p class ="charity-title">Charity 1<p>
+          <p class="charity-description">Description of the charity</p>
+          <button class="btn donate-button">Donate</button>
+        </li>
+
+        <li class="charity">
+          <p class ="charity-title">Charity 2</p>
+          <p class="charity-description">Description of the charity</p>
+          <button class="btn donate-button">Donate</button>
+        </li>
+
+        <li class="charity">
+          <p class ="charity-title">Charity 3</p>
+          <p class="charity-description">Description of the charity</p>
+          <button class="btn donate-button">Donate</button>
+        </li>
+
+        <li class="charity">
+          <p class ="charity-title">Charity 4</p>
+          <p class="charity-description">Description of the charity</p>
+          <button class="btn donate-button">Donate</button>
+        </li>
+
+        <li class="charity">Charity 5
+          <p class="charity-description">Description of the charity</p>
+          <button class="btn donate-button">Donate</button>
+        </li>
+      </ul>
+    </div>
+
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
