--- a/css/custom.css
+++ b/css/custom.css
@@ -83,7 +83,7 @@ h4 {
     padding-left: 20px;
     margin: 10px;
     border-radius: 20px;
-    width: 600px;
+    width: 98%;
 }
 
 .charity-title {
