updated shop page

--- a/views/shop.html
+++ b/views/shop.html
@@ -50,7 +50,83 @@
     </nav>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
-
+	<div class ="container">
+		<h2>
+			Log what you want to 
+		</h2>
+		<br>
+		<div class="col-md-4">
+			<table>
+				<tr> 
+					<td>
+						Got it? 
+					</td>
+					<td>
+						Food
+					</td>
+					<td>
+						Amount
+					</td>
+				</tr>
+				<tr> 
+					<td>
+						<input type="checkbox"/>
+					</td>
+					<td>
+						<input type="text"/>
+					</td>
+					<td>
+						<input type="text"/>
+					</td>
+					<td>
+						<select>
+							<option value="lb"> lbs </option>
+							<option value="oz"> oz </option>
+							<option value="packages"> packages </option>
+						</select>
+					</td>
+				</tr>
+				<tr> 
+					<td>
+						<input type="checkbox"/>
+					</td>
+					<td>
+						<input type="text"/>
+					</td>
+					<td>
+						<input type="text"/>
+					</td>
+					<td>
+						<select>
+							<option value="lb"> lbs </option>
+							<option value="oz"> oz </option>
+							<option value="packages"> packages </option>
+						</select>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<input type="checkbox"/>
+					</td>
+					<td>
+						<input type="text"/>
+					</td>
+					<td>
+						<input type="text"/>
+					</td>
+					<td>
+						<select>
+							<option value="lb"> lbs </option>
+							<option value="oz"> oz </option>
+							<option value="packages"> packages </option>
+						</select>
+					</td>
+				</tr>
+			</table>
+		</div>
+	</div>
+	
+	
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
