--- a/views/index.html
+++ b/views/index.html
@@ -53,8 +53,11 @@
     <div class="jumbotron"  id="foodhome">
       <div class="container" id="homebox">
           <center>
+              <br>
         <h1>Hello, Theodore!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+        <p>What would you like to do?</p>
+              <br>
+              <br>
         </center>
       </div>
     </div>
