added some touches to the page

--- a/css/custom.css
+++ b/css/custom.css
@@ -63,12 +63,6 @@ h4 {
     color:white;
 }
 
-#donate-title {
-    font-size: 63px;
-    margin-left: 10px;
-    margin-bottom: 0px;
-    text-align: center;
-}
 
 #donate-intro {
     font-size: 25px;
@@ -116,4 +110,13 @@ h4 {
 
 p {
     font-size: 16px;
+}
+
+td {
+    padding: 10px;
+}
+
+#shoplist {
+    background-color: lightyellow;
+    padding: 0px 20px 20px 20px;
 }
