--- a/views/give.html
+++ b/views/give.html
@@ -49,10 +49,11 @@
       </div>
     </nav>
     <!-- Main jumbotron for a primary marketing message or call to action -->
-
-    <div id="give-content">
-      <p id="donate-title">Donate</p>
+      
+        <div class="container">
+            
       <ul id="charities">
+          <h2 style="margin-left:15px;">Donate</h2>
         <p id="donate-intro">You have saved <u><strong>$63.54</strong></u>! Donate to one of the great charitites below!</p>
         <li class="charity">
           <p class ="charity-title">Feeding America<p>
@@ -62,7 +63,7 @@
         </li>
         <li class="charity">
           <p class ="charity-title">Feed The Children</p>
-          <p class="charity-description">Feed The Children's mission is to feed hungry kids all over America. In communities with oppressive poverty, they bring hope and real help. Feed the Children gives kids the chance to learn again, providing backpacks and school supplies to families who can't afford them. And whenever disaster strikes, they're on the ground fast, distributing the aid needed most. <a class="learn-more" href="http://http://www.feedthechildren.org/">Learn More</a></p>
+          <p class="charity-description">Feed The Children's mission is to feed hungry kids all over America. In communities with oppressive poverty, they bring hope and real help. Feed the Children gives kids the chance to learn again, providing backpacks and school supplies to families who can't afford them. And whenever disaster strikes, they're on the ground fast, distributing the aid needed most. <a class="learn-more" href="http://www.feedthechildren.org/">Learn More</a></p>
           <button class="btn donate-button">Donate</button>
         </li>
         <li class="charity">
