--- a/views/shop.html
+++ b/views/shop.html
@@ -48,11 +48,11 @@
         </div><!--/.navbar-collapse -->
       </div>
     </nav>
-
+<br><br>
     <!-- Main jumbotron for a primary marketing message or call to action -->
-	<div class ="container">
+	<div class ="container" id="shoplist">
 		<h2>
-			Log what you want to 
+			My Shopping List 
 		</h2>
 		<br>
 		<div class="col-md-4">
@@ -122,7 +122,62 @@
 						</select>
 					</td>
 				</tr>
+                <tr>
+					<td>
+						<input type="checkbox"/>
+					</td>
+					<td>
+						<input type="text"/>
+					</td>
+					<td>
+						<input type="text"/>
+					</td>
+					<td>
+						<select>
+							<option value="lb"> lbs </option>
+							<option value="oz"> oz </option>
+							<option value="packages"> packages </option>
+						</select>
+					</td>
+				</tr>
+                <tr>
+					<td>
+						<input type="checkbox"/>
+					</td>
+					<td>
+						<input type="text"/>
+					</td>
+					<td>
+						<input type="text"/>
+					</td>
+					<td>
+						<select>
+							<option value="lb"> lbs </option>
+							<option value="oz"> oz </option>
+							<option value="packages"> packages </option>
+						</select>
+					</td>
+				</tr>
+                <tr>
+					<td>
+						<input type="checkbox"/>
+					</td>
+					<td>
+						<input type="text"/>
+					</td>
+					<td>
+						<input type="text"/>
+					</td>
+					<td>
+						<select>
+							<option value="lb"> lbs </option>
+							<option value="oz"> oz </option>
+							<option value="packages"> packages </option>
+						</select>
+					</td>
+				</tr>
 			</table>
+            <button type="submit" class="btn btn-success">Save</button>
 		</div>
 	</div>
 	
