got rid of light yellow box

--- a/views/shop.html
+++ b/views/shop.html
@@ -50,8 +50,8 @@
     </nav>
 <br><br>
     <!-- Main jumbotron for a primary marketing message or call to action -->
-	<div class ="container" id="shoplist">
-		<h2>
+	<div class ="container">
+		<h2 style="margin-left:15px">
 			My Shopping List 
 		</h2>
 		<br>
@@ -177,6 +177,7 @@
 					</td>
 				</tr>
 			</table>
+            <br>
             <button type="submit" class="btn btn-success">Save</button>
 		</div>
 	</div>
