--- a/views/give.html
+++ b/views/give.html
@@ -59,27 +59,27 @@
           <p class ="charity-title">Feeding America<p>
           <p class="charity-description">The Feeding America network secures and provides food for families in need; operates programs that promote self-sufficiency; educates the public about hunger; and advocates for legislation that protects people from going hungry. <a class="learn-more" href="http://www.feedingamerica.org/
 ">Learn More</a></p>
-          <button class="btn donate-button">Donate</button>
+          <button type="submit" class="btn btn-success">Donate</button>
         </li>
         <li class="charity">
           <p class ="charity-title">Feed The Children</p>
           <p class="charity-description">Feed The Children's mission is to feed hungry kids all over America. In communities with oppressive poverty, they bring hope and real help. Feed the Children gives kids the chance to learn again, providing backpacks and school supplies to families who can't afford them. And whenever disaster strikes, they're on the ground fast, distributing the aid needed most. <a class="learn-more" href="http://www.feedthechildren.org/">Learn More</a></p>
-          <button class="btn donate-button">Donate</button>
+          <button type="submit" class="btn btn-success">Donate</button>
         </li>
         <li class="charity">
           <p class ="charity-title">Greater Chicago Food Depository</p>
           <p class="charity-description">The Food Depository, founded in 1979, makes a daily impact across Cook County with a network of 650 pantries, soup kitchens, shelters, mobile programs, children’s programs, older adult programs and innovative responses that address the root causes of hunger. Last year, the Food Depository distributed 68 million pounds of shelf-stable food, fresh produce, dairy products and meat, the equivalent of 155,000 meals every day. <a class="learn-more" href="http://www.chicagosfoodbank.org/">Learn More</a></p>
-          <button class="btn donate-button">Donate</button>
+          <button type="submit" class="btn btn-success">Donate</button>
         </li>
         <li class="charity">
           <p class ="charity-title">Action Against Hunger</p>
           <p class="charity-description">Action Against Hunger | ACF International, a global humanitarian organization committed to ending world hunger, works to save the lives of malnourished children while providing communities with access to safe water and sustainable solutions to hunger. <a class="learn-more" href="http://www.actionagainsthunger.org/">Learn More</a></p>
-          <button class="btn donate-button">Donate</button>
+          <button type="submit" class="btn btn-success">Donate</button>
         </li>
         <li class="charity">
           <p class ="charity-title">Meals on Wheels America</p>
           <p class="charity-description">At the core of the Meals on Wheels service is a nutritious meal, companionship and a watchful eye on the health and safety of our seniors. For those who have trouble getting around, we bring the service to you. For those who can still venture out into their communities, we serve in gathering places, such as senior centers and community facilities. <a class="learn-more" href="http://www.mealsonwheelsamerica.org/">Learn More</a></p>
-          <button class="btn donate-button">Donate</button>
+          <button type="submit" class="btn btn-success">Donate</button>
         </li>
       </ul>
     </div>
