--- a/views/shop.html
+++ b/views/shop.html
@@ -50,7 +50,7 @@
     </nav>
 <br><br>
     <!-- Main jumbotron for a primary marketing message or call to action -->
-	<div class ="container">
+	<div class ="container" id="shopbox">
 		<h2 style="margin-left:15px">
 			My Shopping List 
 		</h2>
