--- a/views/shop.html
+++ b/views/shop.html
@@ -52,8 +52,6 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
 	<div class ="container">
 
-		<p class="shop-title">Shop</p>
-
 		<h2 style="margin-left:15px">
 			My Shopping List 
 		</h2>
@@ -193,9 +191,7 @@
 	
 	<div class="container">
 		<br>
-		<div class="wrapper">
-		<button class="btn save-button">Save</button>
-		</div>
+		<button class="btn btn-success">Save</button>
 	</div>
 	
         
