--- a/views/shop.html
+++ b/views/shop.html
@@ -39,7 +39,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <h3><a href="index.html" id="navlink">foodo</a></h3>
+          <h3><a href="home.html" id="navlink">foodo</a></h3>
         </div>
               
         <div id="navbar" class="navbar-collapse collapse">
