added in lbs to track page

--- a/views/track.html
+++ b/views/track.html
@@ -62,7 +62,7 @@
               <br>
             <p>Food: <input type="text"></p>
               <br>
-            <p>Amount: <input type="text"></p>
+            <p>Amount (in lbs): <input type="text"></p>
               <br>
             <button type="submit" class="btn btn-success">Save</button>
       </div>
