added pop up donation modals in give page

--- a/css/custom.css
+++ b/css/custom.css
@@ -159,8 +159,13 @@ input[type='checkbox'] {
     transform:scale(2, 2);
 }
 
+.modal-header {
+    background-color: orange;
+}
 
-
+.modal-body {
+    background-color: #ffdb4d;
+}
 
 .shop-title {
     font-size: 63px;
@@ -168,3 +173,4 @@ input[type='checkbox'] {
     margin-bottom: 0px;
     text-align: center;
 }
+
