--- a/views/give.html
+++ b/views/give.html
@@ -29,7 +29,6 @@
   </head>
 
   <body>
-
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -50,35 +49,56 @@
     </nav>
     <!-- Main jumbotron for a primary marketing message or call to action -->
       
-        <div class="container">
-            
+    <div class="container">
+
       <ul id="charities">
-          <h2 style="margin-left:15px;">Donate</h2>
+        <h2 style="margin-left:15px;">Donate</h2>
         <p id="donate-intro">You have saved <u><strong>$63.54</strong></u>! Donate to one of the great charitites below!</p>
         <li class="charity">
           <p class ="charity-title">Feeding America<p>
           <p class="charity-description">The Feeding America network secures and provides food for families in need; operates programs that promote self-sufficiency; educates the public about hunger; and advocates for legislation that protects people from going hungry. <a class="learn-more" href="http://www.feedingamerica.org/" target="_blank">Learn More</a></p>
-          <button type="submit" class="btn btn-success">Donate</button>
+          <button type="submit" class="btn btn-success" data-toggle="modal" data-target="#myModal">Donate</button>
+
+          <!-- Modal -->
+          <div class="modal fade" tabindex="-1" role="dialog" id="myModal">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  <h3 class="modal-title">Make a donation!</h3>
+                </div>
+                <div class="modal-body">
+                  <p>How much do you want to donate?</p>
+                  <input type="text">
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                  <button type="button" class="btn btn-success">Donate</button>
+                </div>
+              </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+          </div><!-- /.modal -->
+          
         </li>
         <li class="charity">
           <p class ="charity-title">Feed The Children</p>
           <p class="charity-description">Feed The Children's mission is to feed hungry kids all over America. In communities with oppressive poverty, they bring hope and real help. Feed the Children gives kids the chance to learn again, providing backpacks and school supplies to families who can't afford them. And whenever disaster strikes, they're on the ground fast, distributing the aid needed most. <a class="learn-more" href="http://www.feedthechildren.org/" target="_blank">Learn More</a></p>
-          <button type="submit" class="btn btn-success">Donate</button>
+          <button type="submit" class="btn btn-success" data-toggle="modal" data-target="#myModal">Donate</button>
         </li>
         <li class="charity">
           <p class ="charity-title">Greater Chicago Food Depository</p>
           <p class="charity-description">The Food Depository, founded in 1979, makes a daily impact across Cook County with a network of 650 pantries, soup kitchens, shelters, mobile programs, children’s programs, older adult programs and innovative responses that address the root causes of hunger. Last year, the Food Depository distributed 68 million pounds of shelf-stable food, fresh produce, dairy products and meat, the equivalent of 155,000 meals every day. <a class="learn-more" href="http://www.chicagosfoodbank.org/" target="_blank">Learn More</a></p>
-          <button type="submit" class="btn btn-success">Donate</button>
+          <button type="submit" class="btn btn-success" data-toggle="modal" data-target="#myModal">Donate</button>
         </li>
         <li class="charity">
           <p class ="charity-title">Action Against Hunger</p>
           <p class="charity-description">Action Against Hunger | ACF International, a global humanitarian organization committed to ending world hunger, works to save the lives of malnourished children while providing communities with access to safe water and sustainable solutions to hunger. <a class="learn-more" href="http://www.actionagainsthunger.org/" target="_blank">Learn More</a></p>
-          <button type="submit" class="btn btn-success">Donate</button>
+          <button type="submit" class="btn btn-success" data-toggle="modal" data-target="#myModal">Donate</button>
         </li>
         <li class="charity">
           <p class ="charity-title">Meals on Wheels America</p>
           <p class="charity-description">At the core of the Meals on Wheels service is a nutritious meal, companionship and a watchful eye on the health and safety of our seniors. For those who have trouble getting around, we bring the service to you. For those who can still venture out into their communities, we serve in gathering places, such as senior centers and community facilities. <a class="learn-more" href="http://www.mealsonwheelsamerica.org/" target="_blank">Learn More</a></p>
-          <button type="submit" class="btn btn-success">Donate</button>
+          <button type="submit" class="btn btn-success" data-toggle="modal" data-target="#myModal">Donate</button>
         </li>
       </ul>
     </div>
@@ -112,8 +132,8 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
