edited donation message

--- a/views/give.html
+++ b/views/give.html
@@ -88,7 +88,7 @@
                   <h3 class="modal-title">Thank you!</h3>
                 </div>
                 <div class="modal-body">
-                  <p>Your donation will help ensure people in need have enough to eat. You now have $____ left to donate. Keep on saving!</p>
+                  <p>Your donation will help ensure people in need have enough to eat. Keep on saving!</p>
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
