centered footers on all pages

--- a/views/home.html
+++ b/views/home.html
@@ -65,6 +65,7 @@
     <div class="container">
       <!-- Example row of columns -->
       <div class="row">
+        <center>
         <div class="col-md-4">
           <h2><a href="shop.html"><i class="fa fa-shopping-cart"></i>  Shop</a></h2>
         </div>
@@ -73,8 +74,8 @@
        </div>
         <div class="col-md-4">
           <h2><a href="give.html"><span class="glyphicon glyphicon-grain"></span>  Give</a></h2>
-
         </div>
+      </center>
       </div>
 
       <footer>
