--- a/views/shop.html
+++ b/views/shop.html
@@ -199,7 +199,7 @@
 	<hr>
 
     <div class="container">
-      <!-- Example row of columns -->
+    <center>
       <div class="row">
         <div class="col-md-4">
           <h2><a href="shop.html"><i class="fa fa-shopping-cart"></i>  Shop</a></h2>
@@ -209,9 +209,9 @@
        </div>
         <div class="col-md-4">
           <h2><a href="give.html"><span class="glyphicon glyphicon-grain"></span>  Give</a></h2>
-
         </div>
       </div>
+  	</center>
 
       <footer>
       </footer>
