--- a/views/shop.html
+++ b/views/shop.html
@@ -39,7 +39,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <h3><a href="home.html" id="navlink">foodo</a></h3>
+          
+            <ul>
+                <li><a href="home.html" id="navlink">foodo</a></li>
+           <li> <a href="shop.html" id="navlink"><i class="fa fa-shopping-cart"></i>  Shop</a></li>
+            <li><a href="track.html" id="navlink"><i class="fa fa-line-chart"></i>  Track</a></li>
+           <li><a href="give.html" id="navlink"><span class="glyphicon glyphicon-grain"></span>  Give</a></li> 
+                </ul>
         </div>
               
         <div id="navbar" class="navbar-collapse collapse">
@@ -48,6 +54,7 @@
         </div><!--/.navbar-collapse -->
       </div>
     </nav>
+      
 <br><br>
     <!-- Main jumbotron for a primary marketing message or call to action -->
 	<div class ="container">
@@ -193,25 +200,6 @@
 		<br>
 		<button class="btn btn-success">Save</button>
 	</div>
-	
-        
-	
-	<hr>
-
-    <div class="container">
-    <center>
-      <div class="row">
-        <div class="col-md-4">
-          <h2><a href="shop.html"><i class="fa fa-shopping-cart"></i>  Shop</a></h2>
-        </div>
-        <div class="col-md-4">
-          <h2><a href="track.html"><i class="fa fa-line-chart"></i>  Track</a></h2>
-       </div>
-        <div class="col-md-4">
-          <h2><a href="give.html"><span class="glyphicon glyphicon-grain"></span>  Give</a></h2>
-        </div>
-      </div>
-  	</center>
 
       <footer>
       </footer>
