--- a/views/shop.html
+++ b/views/shop.html
@@ -59,9 +59,10 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
 	<div class ="container">
 
-		<h2 style="margin-left:15px">
+		<h2>
 			My Shopping List 
 		</h2>
+       <p class ="tc-name">I'm shopping at:</p> <input type="text" placeholder="Example: Jewel-Osco, Trader Joe's, etc."/>
 
 		<br>
 		<div class="col-md-4">
@@ -198,7 +199,10 @@
 	
 	<div class="container">
 		<br>
+        <button class="btn btn-success" id="add">Add Another Row</button>
+        
 		<button class="btn btn-success">Save</button>
+        <button class="btn btn-success" id="clear">Clear</button>
 	</div>
 
       <footer>
