--- a/views/give.html
+++ b/views/give.html
@@ -126,9 +126,10 @@
           <button type="submit" class="btn btn-success" data-toggle="modal" data-target="#myModal">Donate</button>
         </li>
       </ul>
-    </div>
 
       <footer>
+        <hr>
+        &#169; Daniel Letscher, Oliver Goodman, Rosalie Chan, Ryan Masson and Karina Sirota
       </footer>
     </div> <!-- /container -->
 
