--- a/views/home.html
+++ b/views/home.html
@@ -77,8 +77,10 @@
         </div>
       </center>
       </div>
-
+<br>
       <footer>
+        <hr>
+        &#169; Daniel Letscher, Oliver Goodman, Rosalie Chan, Ryan Masson and Karina Sirota
       </footer>
     </div> <!-- /container -->
 
