--- a/views/shop.html
+++ b/views/shop.html
@@ -78,26 +78,7 @@
 						<p class ="tc-name">Amount </p>
 					</td>
 				</tr>
-				<tr> 
-					<td>
-						<input type="checkbox"/>
-					</td>
-					<td>
-						<input type="text"/>
-					</td>
-					<td>
-						<input type="text"/>
-					</td>
-					<td>
-						
-						<select>
-							<option value="lb"> lbs </option>
-							<option value="oz"> oz </option>
-							<option value="packages"> packages </option>
-						</select>
-						
-					</td>
-				</tr>
+				
 				<tr> 
 					<td>
 						<input type="checkbox"/>
@@ -203,9 +184,10 @@
         
 		<button class="btn btn-success">Save</button>
         <button class="btn btn-success" id="clear">Clear</button>
-	</div>
 
       <footer>
+        <hr>
+        &#169; Daniel Letscher, Oliver Goodman, Rosalie Chan, Ryan Masson and Karina Sirota
       </footer>
     </div> <!-- /container -->
 
