--- a/views/track.html
+++ b/views/track.html
@@ -72,14 +72,12 @@
               <br>
             <button type="submit" class="btn btn-success">Save</button>
       </div>
-          </div>
       <br>
+    </div class="container"> <!-- /container -->
 
       <footer>
-      </footer>
-    </div> <!-- /container -->
-
-      <footer>
+        <hr>
+        &#169; Daniel Letscher, Oliver Goodman, Rosalie Chan, Ryan Masson and Karina Sirota
       </footer>
     </div> <!-- /container -->
 
