fixed track page

--- a/views/track.html
+++ b/views/track.html
@@ -61,7 +61,7 @@
           <br>
       <iframe src="http://e.infogr.am/foodo-96214668004?src=embed" title="Foodo" width="50%" height="600px" scrolling="no" frameborder="0" style="border:none; float:left;"></iframe><div style="padding:8px 0;font-family:Arial!important;font-size:13px!important;line-height:15px!important;text-align:center;margin:0 30px">
           </div>
-          <div style="padding-left: 60%;">
+          <div class="container" id="loginfo">
           <h2>Log waste</h2>
               <br>
               <p>Date: <input type="text" id="datepicker"></p>
@@ -73,7 +73,7 @@
             <button type="submit" class="btn btn-success">Save</button>
       </div>
       <br>
-    </div class="container"> <!-- /container -->
+    <div class="container"> <!-- /container -->
 
       <footer>
         <hr>
