fix home linking

--- a/views/give.html
+++ b/views/give.html
@@ -40,7 +40,7 @@
           </button>
           
             <ul>
-                <li><a href="../home.html" id="navlink">foodo</a></li>
+                <li><a href="/" id="navlink">foodo</a></li>
            <li> <a href="shop.html" id="navlink"><i class="fa fa-shopping-cart"></i>  Shop</a></li>
             <li><a href="track.html" id="navlink"><i class="fa fa-line-chart"></i>  Track</a></li>
            <li><a href="give.html" id="navlink"><span class="glyphicon glyphicon-grain"></span>  Give</a></li> 
