--- a/views/give.html
+++ b/views/give.html
@@ -74,7 +74,7 @@
                   <h3 class="modal-title">Make a donation!</h3>
                 </div>
                 <div class="modal-body">
-                  <p>How much do you want to donate?</p>
+                  <p>You have saved <u><strong>$63.54</strong></u>! How much do you want to donate?</p>
                   <input type="text">
                 </div>
                 <div class="modal-footer">
