--- a/views/shop.html
+++ b/views/shop.html
@@ -69,7 +69,7 @@
 			<table class="shop-table">
 				<tr> 
 					<td class = "wide">
-						<p class ="tc-name">Got it? </p>
+						<p class ="tc-name">Purchased? </p>
 					</td>
 					<td>
 						<p class ="tc-name">Food </p>
